<resources>
    <string name="app_name">Anime</string>
    <string name="search_wiki">Search</string>
    <string name="wiki_helper_text">write something</string>
    <string name="or">OR</string>
    <string name="random_anime">Random Anime</string>
    <string name="favourite">favourite</string>
    <string name="settings">settings</string>
    <string name="image_description">description</string>
    <string name="anime_description">anime description</string>
    <string name="season1">season1</string>
    <string name="season2">season2</string>
    <string name="s1">s1</string>
    <string name="s2">s2</string>
    <string name="s3">s3</string>
    <string name="s4">s4</string>
    <string name="s5">s5</string>
    <string name="s6">s6</string>
    <string name="s7">s7</string>
    <string name="s8">s8</string>
    <string name="series_description">series description</string>
    <string name="watch">watch</string>
    <string name="set_theme">Set theme:</string>
    <string name="violet">Violet</string>
    <string name="green">Green</string>
    <string name="start">START</string>
    <string name="profile">profile</string>
    <string name="bottom_style">Bottom style</string>
    <string name="AppBar">App Bar</string>
    <string name="BottomView">Bottom View</string>
    <string name="main">view</string>
    <string name="mainFragment_itemYear"><u>1999-2001</u></string>
    <string name="anime_seasons">4 seasons</string>
    <string name="test_image1">https://coub-anubis-a.akamaized.net/coub_storage/channel/cw_avatar/f90542a1773/bb47ff764acbf285f584d/profile_pic_new_2x_1607598665_1kzsccl_1588201404_vs.jpg</string>
    <string name="test_image2">https://img1.ak.crunchyroll.com/i/spire3/7899b8b0ec09d3edd4c34f85878d20d11624464686_large.jpg</string>
    <string name="test_image3">https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/7e/7eb1b9e4114d7e8b3a7a3782022cec320bd07089_full.jpg</string>
</resources>