<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="10dp"
        android:background="@drawable/f"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/search_wiki"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/white"
            app:hintTextColor="@color/white"
            app:endIconTint="@color/white"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_search"
            app:counterTextColor="@color/white"
            app:helperTextTextColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:endIconCheckable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_edit_text"
                android:background="#806200EE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:id="@+id/search_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/input_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:text="@string/or"/>
            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/random_anime"
                app:backgroundTint="#806200EE" />


        </LinearLayout>



        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:paddingBottom="50dp"
            app:layout_constraintTop_toBottomOf="@+id/search_group"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/general"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:id="@+id/image_container"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <com.magistor8.anime.EquilateralImageView
                        android:id="@+id/image_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@string/image_description"
                        android:layout_marginTop="30dp"
                        android:tint="#806200EE"
                        app:layout_constraintTop_toBottomOf="@+id/search_group"
                        app:srcCompat="@drawable/nophoto" />

                </FrameLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/anime_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/image_container"
                    android:textColor="@color/white"
                    android:text="@string/anime_description"
                    android:padding="10dp"
                    android:background="@drawable/textlines"/>


                <HorizontalScrollView
                    android:id="@+id/chip_group_season"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/textlines"
                    app:layout_constraintTop_toBottomOf="@+id/anime_description">

                    <com.google.android.material.chip.ChipGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:singleSelection="true"
                        app:layout_constraintTop_toBottomOf="@+id/anime_description">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_1"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false"
                            android:textColor="@color/white"
                            app:chipBackgroundColor="@color/bg_chip_state_list"
                            android:text="@string/season1"
                            app:layout_constraintTop_toBottomOf="@+id/chip_group"/>
                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_2"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false"
                            android:textColor="@color/white"
                            app:chipBackgroundColor="@color/bg_chip_state_list"
                            android:text="@string/season2"
                            app:layout_constraintTop_toBottomOf="@+id/chip_group"/>

                    </com.google.android.material.chip.ChipGroup>

                </HorizontalScrollView>


                <HorizontalScrollView
                    android:id="@+id/chip_group_series"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/textlines"
                    app:layout_constraintTop_toBottomOf="@+id/chip_group_season">

                    <com.google.android.material.chip.ChipGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:singleSelection="true"
                        app:layout_constraintTop_toBottomOf="@+id/anime_description">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_3"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false"
                            android:textColor="@color/white"
                            app:chipBackgroundColor="@color/bg_chip_state_list"
                            android:text="@string/s1"
                            app:layout_constraintTop_toBottomOf="@+id/chip_group"/>
                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_4"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false"
                            android:textColor="@color/white"
                            app:chipBackgroundColor="@color/bg_chip_state_list"
                            android:text="@string/s2"
                            app:layout_constraintTop_toBottomOf="@+id/chip_group"/>
                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_5"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false"
                            android:textColor="@color/white"
                            app:chipBackgroundColor="@color/bg_chip_state_list"
                            android:text="@string/s3"
                            app:layout_constraintTop_toBottomOf="@+id/chip_group"/>
                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_6"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false"
                            android:textColor="@color/white"
                            app:chipBackgroundColor="@color/bg_chip_state_list"
                            android:text="@string/s4"
                            app:layout_constraintTop_toBottomOf="@+id/chip_group"/>
                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_7"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false"
                            android:textColor="@color/white"
                            app:chipBackgroundColor="@color/bg_chip_state_list"
                            android:text="@string/s5"
                            app:layout_constraintTop_toBottomOf="@+id/chip_group"/>
                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_8"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false"
                            android:textColor="@color/white"
                            app:chipBackgroundColor="@color/bg_chip_state_list"
                            android:text="@string/s6"
                            app:layout_constraintTop_toBottomOf="@+id/chip_group"/>
                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_9"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false"
                            android:textColor="@color/white"
                            app:chipBackgroundColor="@color/bg_chip_state_list"
                            android:text="@string/s7"
                            app:layout_constraintTop_toBottomOf="@+id/chip_group"/>
                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_10"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false"
                            android:textColor="@color/white"
                            app:chipBackgroundColor="@color/bg_chip_state_list"
                            android:text="@string/s8"
                            app:layout_constraintTop_toBottomOf="@+id/chip_group"/>

                    </com.google.android.material.chip.ChipGroup>

                </HorizontalScrollView>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/series_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/chip_group_series"
                    android:textColor="@color/white"
                    android:text="@string/series_description"
                    android:padding="10dp"
                    android:background="@drawable/textlines"/>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:text="@string/watch"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/series_description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:backgroundTint="#8003DAC5" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        layout="@layout/bottom_sheet_container"
        android:id="@+id/bottom_sheet_inc"/>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:backgroundTint="#806200EE"
        app:fabAlignmentMode="center"
        app:layout_anchor="@+id/bottom_sheet_inc"
        app:layout_anchorGravity="top|center"
        app:navigationIcon="@drawable/ic_hamb"
        app:navigationIconTint="@color/white"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

