<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:padding="@dimen/mainFragment_padding"
    android:background="?mainBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/mainFragment_TextInputLayout"
        android:id="@+id/input_layout"
        android:layout_height="wrap_content"
        app:endIconCheckable="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:alpha="0"
        android:clickable="false">
        <com.google.android.material.textfield.TextInputEditText
            style="@style/mainFragment_TextInputLayout_TextInputEditText"
            android:id="@+id/input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:id="@+id/search_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/search_group_marginTop"
        app:layout_constraintTop_toBottomOf="@+id/input_layout"
        android:alpha="0"
        android:clickable="false">

        <TextView
            style="@style/search_group_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"/>
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>

        <com.google.android.material.button.MaterialButton
            style="@style/search_group_materialButton"
            android:layout_width="wrap_content" />

    </LinearLayout>



    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingBottom="@dimen/mainFragment_ScrollView_paddingBottom"
        app:layout_constraintTop_toBottomOf="@+id/search_group"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.motion.widget.MotionLayout
            android:id="@+id/general"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutDescription="@xml/motion_scene">

            <FrameLayout
                android:id="@+id/image_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.magistor8.anime.view.imageview.EquilateralImageView
                    style="@style/mainFragment_EquilateralImageView"
                    android:id="@+id/image_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:layout_constraintTop_toBottomOf="@+id/search_group" />

            </FrameLayout>

            <com.google.android.material.textview.MaterialTextView
                style="@style/mainFragment_animeDescription"
                android:id="@+id/anime_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/image_container"
                android:text="@string/anime_description" />


            <HorizontalScrollView
                android:id="@+id/chip_group_season"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textlines"
                android:scrollbars="none"
                app:layout_constraintTop_toBottomOf="@+id/anime_description"
                android:alpha="0"
                android:clickable="false">

                <com.google.android.material.chip.ChipGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:singleSelection="true"
                    app:layout_constraintTop_toBottomOf="@+id/anime_description">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_1"
                        style="@style/seasonChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/season1"
                        app:layout_constraintTop_toBottomOf="@+id/chip_group"/>
                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_2"
                        style="@style/seasonChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/season2"
                        app:layout_constraintTop_toBottomOf="@+id/chip_group"/>

                </com.google.android.material.chip.ChipGroup>

            </HorizontalScrollView>


            <HorizontalScrollView
                android:id="@+id/chip_group_series"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                android:background="@drawable/textlines"
                app:layout_constraintTop_toBottomOf="@+id/chip_group_season"
                android:alpha="0"
                android:clickable="false">

                <com.google.android.material.chip.ChipGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:singleSelection="true"
                    app:layout_constraintTop_toBottomOf="@+id/anime_description">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_3"
                        style="@style/seriesChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/s1"
                        app:layout_constraintTop_toBottomOf="@+id/chip_group"/>
                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_4"
                        style="@style/seriesChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/s2"
                        app:layout_constraintTop_toBottomOf="@+id/chip_group"/>
                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_5"
                        style="@style/seriesChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/s3"
                        app:layout_constraintTop_toBottomOf="@+id/chip_group"/>
                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_6"
                        style="@style/seriesChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/s4"
                        app:layout_constraintTop_toBottomOf="@+id/chip_group"/>
                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_7"
                        style="@style/seriesChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/s5"
                        app:layout_constraintTop_toBottomOf="@+id/chip_group"/>
                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_8"
                        style="@style/seriesChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/s6"
                        app:layout_constraintTop_toBottomOf="@+id/chip_group"/>
                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_9"
                        style="@style/seriesChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/s7"
                        app:layout_constraintTop_toBottomOf="@+id/chip_group"/>
                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_10"
                        style="@style/seriesChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/s8"
                        app:layout_constraintTop_toBottomOf="@+id/chip_group"/>

                </com.google.android.material.chip.ChipGroup>

            </HorizontalScrollView>

            <com.google.android.material.textview.MaterialTextView
                style="@style/mainFragment_seriesDescription"
                android:id="@+id/series_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/chip_group_series"
                android:text="@string/series_description"
                android:background="@drawable/textlines"
                android:alpha="0"
                android:clickable="false"/>

            <com.google.android.material.button.MaterialButton
                style="@style/mainFragment_watchButton"
                android:id="@+id/watch"
                app:layout_constraintTop_toBottomOf="@+id/series_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:alpha="0"
                android:clickable="false"/>

        </androidx.constraintlayout.motion.widget.MotionLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>

