<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/fragment_main_recycler_item_padding"
    android:paddingBottom="@dimen/fragment_main_recycler_item_padding"
    tools:background="?colorPrimary">

    <androidx.cardview.widget.CardView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp">

        <com.magistor8.anime.view.imageview.EquilateralImageView
            style="@style/mainFragment_recycler_EquilateralImageView"
            android:id="@+id/image_view_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/item_title"
            style="@style/mainFragment_animeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anime_description"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/item_seasons"
            style="@style/mainFragment_animeSeasons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anime_seasons"/>

    </LinearLayout>



    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/item_year"
        style="@style/mainFragment_animeYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainFragment_itemYear"
        android:layout_gravity="center"/>


</LinearLayout>
